erDiagram

customer {
    uuid id PK
    text name
}

customer_phone {
    uuid customer_id PK, FK
    text phone_number
}

family {
    uuid id PK
}

family_member {
    uuid family_id PK, FK
    uuid customer_id PK, FK
}

customer ||--o{ customer_phone : ""
customer ||--o{ family_member : ""
family ||--o{ family_member : ""
